<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#376C96"
    tools:context=".activity_lector">

    <TextView
        android:id="@+id/txtTitulo"
        android:layout_width="340dp"
        android:layout_height="75dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="42dp"
        android:text="@string/titulo1"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/btnScan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnScan"
        android:layout_width="125dp"
        android:layout_height="58dp"
        android:layout_marginStart="143dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="143dp"
        android:layout_marginBottom="45dp"
        android:onClick="escanearCodigoBarra"
        android:text="@string/escanear"
        app:layout_constraintBottom_toTopOf="@+id/edtResultado"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitulo" />

    <EditText
        android:id="@+id/edtResultado"
        android:layout_width="326dp"
        android:layout_height="73dp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="43dp"
        android:layout_marginBottom="29dp"
        android:ems="10"
        android:hint="@string/res"
        android:inputType="text"
        android:textColorHint="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/edtDescripcion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnScan" />

    <EditText
        android:id="@+id/edtDescripcion"
        android:layout_width="326dp"
        android:layout_height="73dp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="43dp"
        android:layout_marginBottom="255dp"
        android:ems="10"
        android:hint="@string/descripcion"
        android:inputType="text"
        android:textColorHint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtResultado" />
</androidx.constraintlayout.widget.ConstraintLayout>