<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#376C96"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/etTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="213dp"
        android:text="@string/titulo"
        android:textColor="#F6F5F5"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="413dp"
        android:layout_height="129dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="296dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etTitulo">

        <Button
            android:id="@+id/btnMenu1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="lector"
            android:text="@string/menu1" />

        <Button
            android:id="@+id/btnMenu2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="camara"
            android:text="@string/menu2" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>